kube-resources/site-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: our-site-ingress
  namespace: erpnext
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: erpnext
                port:
                  number: 80
